added virtual threads examples